--- a/css/style.css
+++ b/css/style.css
@@ -202,10 +202,6 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
-html {
-  font-family: 'Bangers', serif;
-  font-size: 85%;
-}
 
 .hexagon {
   position: relative;
@@ -213,6 +209,8 @@ html {
   /* left/right margin approx. 25% of .hexagon width + spacing */
   margin: 1px 18px;
   background-color: hsl(180, 0%, 58%);
+  font-family: 'Bangers', sans-serif;
+  font-size: 50%;
   text-align: center;
 }
 
@@ -222,6 +220,8 @@ html {
   /* left/right margin approx. 25% of .hexagon width + spacing */
   margin: 1px 18px;
   background-color: hsl(180, 0%, 87%);
+  font-family: 'Bangers', sans-serif;
+  font-size: 50%;
   text-align: center;
 }
 
@@ -231,6 +231,8 @@ html {
   /* left/right margin approx. 25% of .hexagon width + spacing */
   margin: 1px 18px;
   background-color: hsl(0, 0%, 95%);
+  font-family: 'Bangers', sans-serif;
+  font-size: 50%;
   text-align: center;
 }
 .hexagon4 {
@@ -239,6 +241,8 @@ html {
   /* left/right margin approx. 25% of .hexagon width + spacing */
   margin: 1px 18px;
   background-color: hsla(0, 0%, 0%, 1.0);
+  font-family: 'Bangers', sans-serif;
+  font-size: 50%;
   text-align: center;
 }
 .hexagon, .hexagon::before, .hexagon::after {
