--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
 .top-navigation a {
   font-size: 16px;
   text-decoration: none;
-  font-family: 'Work Sans Light', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   color: #727272;
   transition: 0.3s cubic-bezier(0.2, 0.8, 0.2, 1);
   transition-delay: 0s;
@@ -69,7 +69,7 @@ body {
 
 .top-navigation a:hover {
   color: black;
-  font-family: 'Work Sans Medium', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 .underline--magical {
@@ -174,7 +174,7 @@ body {
   margin: 0px;
   /*padding-top: 8px; */
   padding-bottom: 12px;
-  font-family: 'Work Sans Light', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 38px;
   color: #17223b;
   text-align: left;
@@ -397,8 +397,8 @@ body {
   left: 45%;
   transform: translate(-50%, -50%);
   width: 150%;
-  font-family: 'Bangers', sans-serif;
-  font-size: 1.4rem;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 0.9rem;
   line-height: 1.2;
   z-index: 100;
 }
@@ -409,6 +409,7 @@ body {
 .honeycomb {
   margin: 0 auto;
   text-align: center;
+  font-size: 5px;
 }
 
 /* Personal Info on landing Ending */
@@ -419,7 +420,7 @@ body {
   margin-right: 120px;
   padding-top: 120px;
   margin-bottom: 48px;
-  margin-top: 72px;*/
+  margin-top: 72px;
 }
 
  
@@ -427,7 +428,7 @@ body {
   margin: 0px;
   /*padding-top: 8px; */
   padding-bottom: 12px;
-  font-family: 'Work Sans Light', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 38px;
   color: #17223b;
   text-align: left;
@@ -509,7 +510,7 @@ body {
   padding-top: 16px;
   padding-bottom: 12px;
   padding-right: 8px;
-  font-family: 'Inria Serif Regular', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 22px;
   line-height: 1.5;
   color: #424242;
@@ -545,7 +546,7 @@ body {
   margin: 0px;
   /*padding-top: 8px; */
   padding-bottom: 12px;
-  font-family: 'Work Sans Light', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 38px;
   color: #17223b;
   text-align: left;
@@ -580,7 +581,7 @@ body {
   margin: 0px;
   /*padding-top: 8px; */
   padding-bottom: 12px;
-  font-family: 'Work Sans Light', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 38px;
   color: #17223b;
   text-align: left;
@@ -620,7 +621,7 @@ body {
   margin: 0px;
   padding-top: 8px;
   padding-bottom: 12px;
-  font-family: 'Work Sans Light', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 38px;
   color: #17223b;
   text-align: left;
@@ -789,7 +790,7 @@ body {
     padding-top: 8px;
     padding-bottom: 16px;
     padding-right: 12px;
-    font-family: 'Inria Serif Regular', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     margin: 0px;
     font-size: 20px;
     line-height: 1.3;
@@ -870,7 +871,7 @@ body {
     padding-top: 16px;
     padding-bottom: 12px;
     padding-right: 8px;
-    font-family: 'Inria Serif Regular', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 24px;
     line-height: 1.5;
     color: #424242;
