--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   display: block;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 200;
 }
 
 .top-background-white {
@@ -59,7 +59,7 @@ body {
 }
 
 .top-navigation a {
-  font-size: 16px;
+  font-size: 18px;
   text-decoration: none;
   font-family: 'Josefin Sans', sans-serif;
   color: #727272;
@@ -123,7 +123,7 @@ body {
 
 
 #personal-tag  span{
-  font-family: 'Work Sans Medium', sans-serif;
+  font-family: 'Lora', sans-serif;
   font-size: 30px;
   color: #17223b;
   text-align: left;
@@ -147,9 +147,9 @@ body {
   margin: 0px;
   max-width: 100%;
   padding-top: 8px;
-  font-family: 'Zilla Slab', sans-serif;
+  font-family: 'Lora', sans-serif;
   font-weight: 400;
-  font-size: 24px;
+  font-size: 20px;
   color: #17223b;
   /*text-align: left;*/
   text-align: justify;
@@ -184,8 +184,8 @@ body {
 .domain-design p {
   margin: 0px;
   padding-top: 24px;
-  font-family: 'Zilla Slab', sans-serif;
-  font-size: 24px;
+  font-family: 'Lora', sans-serif;
+  font-size: 20px;
   color: #17223b;
   /*text-align: left;*/
   text-align: justify;
@@ -194,8 +194,6 @@ body {
   line-height: 1.5;
   margin-bottom: 32px;
 }
-
-/*@import url(https://fonts.googleapis.com/css?family=Bangers);*/
 
 *, *::before, *::after {
   margin: 0;
@@ -207,7 +205,7 @@ body {
   position: relative;
   display: inline-block;
   /* left/right margin approx. 25% of .hexagon width + spacing */
-  margin: 1px 18px;
+  margin: 1px 28px;
   background-color: hsl(180, 0%, 58%);
   text-align: center;
 }
@@ -216,7 +214,7 @@ body {
   position: relative;
   display: inline-block;
   /* left/right margin approx. 25% of .hexagon width + spacing */
-  margin: 1px 18px;
+  margin: 1px 28px;
   background-color: hsl(180, 0%, 87%);
   text-align: center;
 }
@@ -225,7 +223,7 @@ body {
   position: relative;
   display: inline-block;
   /* left/right margin approx. 25% of .hexagon width + spacing */
-  margin: 1px 18px;
+  margin: 1px 28px;
   background-color: hsl(0, 0%, 95%);
   text-align: center;
 }
@@ -233,7 +231,7 @@ body {
   position: relative;
   display: inline-block;
   /* left/right margin approx. 25% of .hexagon width + spacing */
-  margin: 1px 18px;
+  margin: 1px 28px;
   background-color: hsla(0, 0%, 0%, 1.0);
   text-align: center;
 }
@@ -241,8 +239,8 @@ body {
   /* easy way: height is width * 1.732
   actual formula is 2*(width/(2*Math.tan(Math.PI/6)))
   remove border-radius for sharp corners on hexagons */
-  width: 67px;
-  height: 116px;
+  width: 90px;
+  height: 155.88px;
   border-radius: 20%/5%;
 }
 
@@ -250,8 +248,8 @@ body {
   /* easy way: height is width * 1.732
   actual formula is 2*(width/(2*Math.tan(Math.PI/6)))
   remove border-radius for sharp corners on hexagons */
-  width: 67px;
-  height: 116px;
+  width: 90px;
+  height: 155.88px;
   border-radius: 20%/5%;
 }
 
@@ -259,8 +257,8 @@ body {
   /* easy way: height is width * 1.732
   actual formula is 2*(width/(2*Math.tan(Math.PI/6)))
   remove border-radius for sharp corners on hexagons */
-  width: 67px;
-  height: 116px;
+  width: 90px;
+  height: 155.88px;
   border-radius: 20%/5%;
 }
 
@@ -268,8 +266,8 @@ body {
   /* easy way: height is width * 1.732
   actual formula is 2*(width/(2*Math.tan(Math.PI/6)))
   remove border-radius for sharp corners on hexagons */
-  width: 67px;
-  height: 116px;
+  width: 90px;
+  height: 155.88px;
   border-radius: 20%/5%;
 }
 
@@ -331,7 +329,7 @@ body {
 }
 .hexagon:nth-child(even) {
   /* top approx. 50% of .hexagon height + spacing */
-  top: 59px;
+  top: 80px;
 }
 .hexagon:hover {
   background-color: hsla(185, 65%, 60%, 1.0);
@@ -344,7 +342,7 @@ body {
 }
 .hexagon2:nth-child(even) {
   /* top approx. 50% of .hexagon height + spacing */
-  top: 59px;
+  top: 80px;
 }
 .hexagon2:hover {
   background-color: hsla(185, 65%, 60%, 1.0);
@@ -357,7 +355,7 @@ body {
 }
 .hexagon3:nth-child(even) {
   /* top approx. 50% of .hexagon height + spacing */
-  top: 59px;
+  top: 80px;
 }
 .hexagon3:hover {
   background-color: hsla(185, 65%, 60%, 1.0);
@@ -370,7 +368,7 @@ body {
 }
 .hexagon4:nth-child(even) {
   /* top approx. 50% of .hexagon height + spacing */
-  top: 59px;
+  top: 80px;
 }
 .hexagon4:hover {
   background-color: hsla(185, 65%, 60%, 1.0);
@@ -384,21 +382,21 @@ body {
 .hexanone {
   position: relative;
   display: inline-block;
-  width: 67px;
-  height: 116px;
-  margin: 1px 18px;
+  width: 90px;
+  height: 155.88px;
+  margin: 1px 28px;
 }
 .hexanone:nth-child(even) {
-  top: 59px;
+  top: 80px;
 }
 .hexagontent {
   position: absolute;
   top: 50%;
-  left: 45%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  width: 150%;
+  width: 160%;
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   line-height: 1.2;
   z-index: 100;
 }
@@ -438,8 +436,8 @@ body {
 .project-design p {
   margin: 0px;
   padding-top: 24px;
-  font-family: 'Zilla Slab', sans-serif;
-  font-size: 24px;
+  font-family: 'Lora', sans-serif;
+  font-size: 20px;
   color: #17223b;
   /*text-align: left;*/
   text-align: justify;
@@ -556,8 +554,8 @@ body {
 .workexp-design p {
   margin: 0px;
   padding-top: 24px;
-  font-family: 'Zilla Slab', sans-serif;
-  font-size: 24px;
+  font-family: 'Lora', sans-serif;
+  font-size: 20px;
   color: #17223b;
   /*text-align: left;*/
   text-align: justify;
@@ -591,8 +589,8 @@ body {
 .skills-design p {
   margin: 0px;
   padding-top: 24px;
-  font-family: 'Zilla Slab', sans-serif;
-  font-size: 24px;
+  font-family: 'Lora', sans-serif;
+  font-size: 20px;
   color: #17223b;
   /*text-align: left;*/
   text-align: justify;
@@ -664,8 +662,8 @@ body {
 .about p {
   margin: 0px;
   padding-top: 18px;
-  font-family: 'Zilla Slab', sans-serif;
-  font-size: 24px;
+  font-family: 'Lora', sans-serif;
+  font-size: 20px;
   color: #17223b;
   
   text-align: justify;
@@ -721,7 +719,7 @@ body {
   background-color: #fff;
   box-shadow: 0px -2px 4px #f0f0f0;
   margin-top: 120px;
-  z-index: 1;
+  z-index: 200;
 }
 .footer span {
   margin: auto;
@@ -765,8 +763,8 @@ body {
   #page-subheader {
     margin: 0px;
     padding-top: 8px;
-    font-family: 'Zilla Slab', sans-serif;
-    font-size: 24px;
+    font-family: 'Lora', sans-serif;
+    font-size: 20px;
     color: #17223b;
     /*text-align: left;*/
     text-align: justify;
@@ -837,8 +835,8 @@ body {
   .project-design p {
     margin: 0px;
     padding-top: 20px;
-    font-family: 'Zilla Slab', sans-serif;
-    font-size: 24px;
+    font-family: 'Lora', sans-serif;
+    font-size: 20px;
     color: #17223b;
     text-align: left;
     text-align: justify;
@@ -902,8 +900,8 @@ body {
   .workexp-design p {
     margin: 0px;
     padding-top: 20px;
-    font-family: 'Zilla Slab', sans-serif;
-    font-size: 24px;
+    font-family: 'Lora', sans-serif;
+    font-size: 20px;
     color: #17223b;
     /*text-align: left;*/
     text-align: justify;
@@ -926,8 +924,8 @@ body {
   .skills-design p {
     margin: 0px;
     padding-top: 20px;
-    font-family: 'Zilla Slab', sans-serif;
-    font-size: 24px;
+    font-family: 'Lora', sans-serif;
+    font-size: 20px;
     color: #17223b;
     /*text-align: left;*/
     text-align: justify;
@@ -956,8 +954,8 @@ body {
 .about p {
   margin: 0px;
     padding-top: 20px;
-    font-family: 'Zilla Slab', sans-serif;
-    font-size: 24px;
+    font-family: 'Lora', sans-serif;
+    font-size: 20px;
     color: #17223b;
     /*text-align: left;*/
     text-align: justify;
