--- a/css/style.css
+++ b/css/style.css
@@ -991,7 +991,8 @@ body {
   .about {
     margin: auto;
     max-width: 90%;
-    margin-left: 2px;
+    margin-left: 5px;
+    margin-right: 5px;
     padding-top: 100px;
     text-align: justify;
     text-justify: inter-word;
@@ -1018,7 +1019,8 @@ body {
     line-height: 1.5;
     padding-left: 10%;
     padding-right: 10%;
-    margin-left: 6px;
+    margin-left: 5px;
+    margin-right: 5px;
     margin-bottom: 32px;
   }
  
