--- a/css/style.css
+++ b/css/style.css
@@ -832,8 +832,8 @@ body {
   }
 
   .top-navigation span {
-    margin-left: 8px;
-    margin-right: 8px;
+    margin-left: auto;
+    margin-right: auto;
     ;
   }
 
