--- a/css/style.css
+++ b/css/style.css
@@ -752,10 +752,107 @@ body {
   text-decoration: none;
 }
 
-@media only screen and (max-width: 768px) {
-   .demo .main-title {
-      font-size: 3em;
-   }
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container1 {
+  
+  max-width: 500px;
+  position: relative;
+  margin: auto;
+}
+
+.slideshow-container2 {
+  
+  max-width: 500px;
+  position: sticky;
+  margin: auto;
+}
+
+/* Hide the images by default*/
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
 @media only screen and (max-width: 800px) {
@@ -832,8 +929,8 @@ body {
   }
 
   .top-navigation span {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 8px;
+    margin-right: 8px;
     ;
   }
 
@@ -869,7 +966,6 @@ body {
     padding-left: 10%;
     padding-right: 10%;
   }
-  
   .project-design {
     margin: auto;
     max-width: 90%;
@@ -991,8 +1087,7 @@ body {
   .about {
     margin: auto;
     max-width: 90%;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 12px;
     padding-top: 100px;
     text-align: justify;
     text-justify: inter-word;
@@ -1007,7 +1102,7 @@ body {
 
 
   .about p {
-    margin: 0px;
+    margin: auto;
     padding-top: 20px;
     font-family: 'Lora', sans-serif;
     font-size: 20px;
@@ -1019,11 +1114,13 @@ body {
     line-height: 1.5;
     padding-left: 10%;
     padding-right: 10%;
-    margin-left: 5px;
-    margin-right: 5px;
     margin-bottom: 32px;
   }
  
+  .demo .main-title {
+    font-size: 3em;
+  }
+
 }
 
 
